@@ -30,11 +30,11 @@ public class BeanUtil {
     }
 
     public static <T> T copy(T source) {
-        if (source == null) {
+        if(source == null) {
             return null;
         } else {
             //noinspection unchecked
-            return (T) toBean(source, source.getClass());
+            return (T)toBean(source, source.getClass());
         }
     }
 
@@ -43,7 +43,7 @@ public class BeanUtil {
     }
 
     public static <R, T> T toBean(R source, Class<T> targetType, Set<String> ignoreProps) {
-        if (source == null) {
+        if(source == null) {
             return null;
         } else {
             T result = newInstance(targetType);
@@ -57,14 +57,13 @@ public class BeanUtil {
     }
 
     public static <T> T copyProperties(Object source, T target, String... ignoredProperties) {
-        return copyProperties(source, target, ignoredProperties == null || ignoredProperties.length == 0 ?
-                Collections.emptySet() :
-                Set.of(ignoredProperties));
+        return copyProperties(source, target,
+                ignoredProperties == null || ignoredProperties.length == 0 ? Collections.emptySet() : Set.of(ignoredProperties));
     }
 
     public static <T> T copyProperties(Object source, T target, Set<String> ignoredProperties) {
-        if (source == null || target == null) { return target; }
-        if (ignoredProperties == null) { ignoredProperties = Collections.emptySet(); }
+        if(source == null || target == null) { return target; }
+        if(ignoredProperties == null) { ignoredProperties = Collections.emptySet(); }
         BeanDescriptor sd = PropertyUtil.getBeanDescriptor(source.getClass());
         BeanDescriptor td = PropertyUtil.getBeanDescriptor(target.getClass());
         copyProperties(sd, source, td, target, ignoredProperties);
@@ -72,18 +71,17 @@ public class BeanUtil {
         return target;
     }
 
-    private static void copyProperties(BeanDescriptor sd, Object source, BeanDescriptor td, Object target,
-            Set<String> ignoredProperties) {
+    private static void copyProperties(BeanDescriptor sd, Object source, BeanDescriptor td, Object target, Set<String> ignoredProperties) {
         JProperty property;
-        for (int idx = 0, size = td.propertySize(); idx < size; ++idx) {
+        for(int idx = 0, size = td.propertySize(); idx < size; ++idx) {
             BeanPropertyDescriptor tpd = td.propertyDescriptor(idx);
-            if (tpd.writeMethod() == null || ignoredProperties.contains(tpd.propertyName())) { continue; }
+            if(tpd.writeMethod() == null || ignoredProperties.contains(tpd.propertyName())) { continue; }
             BeanPropertyDescriptor spd = sd.propertyDescriptor(tpd.propertyName());
-            if (spd != null) {
-                if (spd.readMethod() != null) {
+            if(spd != null) {
+                if(spd.readMethod() != null) {
                     tpd.writeByMethod(target, spd.readByMethod(source));
                 }
-            } else if ((property = tpd.annotation(JProperty.class)) != null) {
+            } else if((property = tpd.annotation(JProperty.class)) != null) {
                 Object jsonProperty = sd.readProperty(source, property.json());
                 Object value = getJsonProperty(jsonProperty, property.property(), tpd);
                 tpd.writeByMethod(target, value);
@@ -91,15 +89,14 @@ public class BeanUtil {
         }
     }
 
-    private static void copyJSONProperties(BeanDescriptor sd, Object source, BeanDescriptor td, Object target,
-            Set<String> ignoredProperties) {
+    private static void copyJSONProperties(BeanDescriptor sd, Object source, BeanDescriptor td, Object target, Set<String> ignoredProperties) {
         Map<String, JSONObject> jsonMap = readSrcJSONProperties(sd, source, ignoredProperties);
-        if (jsonMap != null) {
-            for (Map.Entry<String, JSONObject> e : jsonMap.entrySet()) {
+        if(jsonMap != null) {
+            for(Map.Entry<String, JSONObject> e : jsonMap.entrySet()) {
                 BeanPropertyDescriptor tpd = td.propertyDescriptor(e.getKey());
-                if (tpd != null && tpd.propertyType() == JSONObject.class) {
-                    JSONObject targetJSON = (JSONObject) tpd.read(target);
-                    if (targetJSON == null) {
+                if(tpd != null && tpd.propertyType() == JSONObject.class) {
+                    JSONObject targetJSON = (JSONObject)tpd.read(target);
+                    if(targetJSON == null) {
                         tpd.write(target, e.getValue());
                     } else {
                         targetJSON.putAll(e.getValue());
@@ -109,19 +106,18 @@ public class BeanUtil {
         }
     }
 
-    private static Map<String, JSONObject> readSrcJSONProperties(BeanDescriptor sd, Object source,
-            Set<String> ignoredProperties) {
+    private static Map<String, JSONObject> readSrcJSONProperties(BeanDescriptor sd, Object source, Set<String> ignoredProperties) {
         Map<String, JSONObject> jsonMap = null;
-        for (int idx = 0, size = sd.propertySize(); idx < size; ++idx) {
+        for(int idx = 0, size = sd.propertySize(); idx < size; ++idx) {
             BeanPropertyDescriptor spd = sd.propertyDescriptor(idx);
-            if (ignoredProperties.contains(spd.propertyName())) { continue; }
+            if(ignoredProperties.contains(spd.propertyName())) { continue; }
             JProperty property = spd.annotation(JProperty.class);
-            if (property != null) {
+            if(property != null) {
                 String key = StringUtils.defaultIfEmpty(property.property(), spd.propertyName());
                 Object value = spd.read(source);
-                if (jsonMap == null) { jsonMap = new HashMap<>(8); }
+                if(jsonMap == null) { jsonMap = new HashMap<>(8); }
                 JSONObject json = jsonMap.computeIfAbsent(property.json(), k -> new JSONObject(true));
-                if (value != null) { json.put(key, value); }
+                if(value != null) { json.put(key, value); }
             }
         }
         return jsonMap;
@@ -129,44 +125,43 @@ public class BeanUtil {
 
     private static Object getJsonProperty(Object jsonProperty, String keyName,//NOSONAR
             BeanPropertyDescriptor pd) {
-        if (!(jsonProperty instanceof JSONObject)) { return null; }
-        if (StringUtils.isEmpty(keyName)) { keyName = pd.propertyName(); }
+        if(!(jsonProperty instanceof JSONObject)) { return null; }
+        if(StringUtils.isEmpty(keyName)) { keyName = pd.propertyName(); }
         Class<?> type = pd.propertyType();
-        if (type == String.class) {
-            return ((JSONObject) jsonProperty).getString(keyName);
-        } else if (type == BigDecimal.class) {
-            return ((JSONObject) jsonProperty).getBigDecimal(keyName);
-        } else if (type == LocalDateTime.class) {
-            return DateUtil.parse(((JSONObject) jsonProperty).getString(keyName));
-        } else if (type == Long.class || type == long.class) {
-            return ((JSONObject) jsonProperty).getLong(keyName);
-        } else if (type == Integer.class || type == int.class) {
-            return ((JSONObject) jsonProperty).getInteger(keyName);
-        } else if (type == Boolean.class || type == boolean.class) {
-            return ((JSONObject) jsonProperty).getBoolean(keyName);
-        } else if (type == Double.class || type == double.class) {
-            return ((JSONObject) jsonProperty).getByte(keyName);
-        } else if (type == Byte.class || type == byte.class) {
-            return ((JSONObject) jsonProperty).getByte(keyName);
-        } else if (type == Short.class || type == short.class) {
-            return ((JSONObject) jsonProperty).getShort(keyName);
-        } else if (type == Float.class || type == float.class) {
-            return ((JSONObject) jsonProperty).getFloat(keyName);
-        } else if (type == Date.class) {
-            return ((JSONObject) jsonProperty).getDate(keyName);
-        } else if (type == LocalDate.class) {
-            return DateUtil.parseAsLocalDate(((JSONObject) jsonProperty).getString(keyName));
+        if(type == String.class) {
+            return ((JSONObject)jsonProperty).getString(keyName);
+        } else if(type == BigDecimal.class) {
+            return ((JSONObject)jsonProperty).getBigDecimal(keyName);
+        } else if(type == LocalDateTime.class) {
+            return DateUtil.parse(((JSONObject)jsonProperty).getString(keyName));
+        } else if(type == Long.class || type == long.class) {
+            return ((JSONObject)jsonProperty).getLong(keyName);
+        } else if(type == Integer.class || type == int.class) {
+            return ((JSONObject)jsonProperty).getInteger(keyName);
+        } else if(type == Boolean.class || type == boolean.class) {
+            return ((JSONObject)jsonProperty).getBoolean(keyName);
+        } else if(type == Double.class || type == double.class) {
+            return ((JSONObject)jsonProperty).getByte(keyName);
+        } else if(type == Byte.class || type == byte.class) {
+            return ((JSONObject)jsonProperty).getByte(keyName);
+        } else if(type == Short.class || type == short.class) {
+            return ((JSONObject)jsonProperty).getShort(keyName);
+        } else if(type == Float.class || type == float.class) {
+            return ((JSONObject)jsonProperty).getFloat(keyName);
+        } else if(type == Date.class) {
+            return ((JSONObject)jsonProperty).getDate(keyName);
+        } else if(type == LocalDate.class) {
+            return DateUtil.parseAsLocalDate(((JSONObject)jsonProperty).getString(keyName));
         } else {
-            return ((JSONObject) jsonProperty).getObject(keyName, pd.propertyGenericType());
+            return ((JSONObject)jsonProperty).getObject(keyName, pd.propertyGenericType());
         }
     }
 
     public static <T> T newInstance(Class<T> type) {
-        if (type.isInterface() || type.isArray() || type.isAnnotation() || type.isEnum() || Modifier.isAbstract(
-                type.getModifiers())) {
+        if(type.isInterface() || type.isArray() || type.isAnnotation() || type.isEnum() || Modifier.isAbstract(type.getModifiers())) {
             throw new BeanInstantiationException(type, "can not create instance");
         }
         //noinspection unchecked
-        return (T) PropertyUtil.getBeanDescriptor(type).newInstance();
+        return (T)PropertyUtil.getBeanDescriptor(type).newInstance();
     }
 }
